--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.swal-footer,
+.swal-text {
+  text-align: center;
+}
+
+.swal-title {
+  margin-bottom: 5px !important;
+}
+.swal-modal {
+  border-radius: 15px;
+}
