--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .swal-footer,
 .swal-text {
   text-align: center;
